test/Translate/Parser/select.p4.ref
error: loc("test/Translate/Parser/select.p4":130:33):  Unsupported parser state statement 'p4hir.tuple'
note: loc("test/Translate/Parser/select.p4":130:33): see current operation: %49 = "p4hir.tuple"(%46, %47, %48) : (!p4hir.bit<32>, !p4hir.bit<32>, !p4hir.bit<32>) -> tuple<!p4hir.bit<32>, !p4hir.bit<32>, !p4hir.bit<32>>
 128 |         transition select (arg1) {
 129 |                    4..10: foo2;
 130 |                    (4..10): foo2;
     |                                 ^
 131 |                    2..(arg2+arg1*7): foo3;
 132 |                    (2..(arg2-3)): foo3;
